Updated README to be more concise
The main README should:
1) Reflect the goal of the project
2) Provide a link to the documentation hub
3) Provide a link to the issue hub